fix(im-service): List.of() → Arrays.asList/Collections.emptyList/singletonList Java 8 兼容
- PersistAndPushNode.java: 2 处 List.of() → Collections.emptyList()
- P2PMessageService.java: 2 处 List.of() → Arrays.asList()/Collections.singletonList()
- List.of() 是 Java 9 API，项目 target 为 Java 8